WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86039
[Cairo] GLContextGLX releases the context with an uninitialized display
https://bugs.webkit.org/show_bug.cgi?id=86039
Summary
[Cairo] GLContextGLX releases the context with an uninitialized display
Martin Robinson
Reported
2012-05-09 17:06:23 PDT
Instead of using sharedDisplay() GLContextGLX releases the context with the m_display member which is uninitialized. This apparently doesn't cause an issue on most machines, but has the potential to create a nasty crash.
Attachments
Patch
(2.52 KB, patch)
2012-05-09 17:09 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2012-05-09 17:09:38 PDT
Created
attachment 141058
[details]
Patch
Philippe Normand
Comment 2
2012-05-09 17:14:21 PDT
Comment on
attachment 141058
[details]
Patch Good catch, Martin!
WebKit Review Bot
Comment 3
2012-05-09 17:34:02 PDT
Comment on
attachment 141058
[details]
Patch Clearing flags on attachment: 141058 Committed
r116585
: <
http://trac.webkit.org/changeset/116585
>
WebKit Review Bot
Comment 4
2012-05-09 17:34:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug