[Cairo] GLContextGLX releases the context with an uninitialized display https://bugs.webkit.org/show_bug.cgi?id=86039

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-05-09
Reviewed by Philippe Normand.

No new tests. This does not change behavior on most machines, but has
the potential to prevent a pretty nasty crash on others.

Use the shared display to release GLX contexts instead of the uninitialized
m_display member.

* platform/graphics/glx/GLContextGLX.cpp:
(WebCore::GLContextGLX::~GLContextGLX): Release the display with the shared
display.
* platform/graphics/glx/GLContextGLX.h:
(GLContextGLX): Remove the m_display member.

Canonical link: https://commits.webkit.org/103629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116585 268f45cc-cd09-0410-ab3c-d52691b4dbfc